# GCanvas

./: .gitignore  .travis.yml  CMakeLists.txt  GCanvas.podspec  README.MD  WeexGcanvas.podspec  build.gradle  community.html  index.css  index.html  package.json  playground.html  publish-npm.sh  publish.gradle  settings.gradle
GCanvas/core/: AndroidManifest.xml  CMakeLists.txt  build.gradle
GCanvas/core/android/: GCanvasJNI.h  elf_sym_reader.h
GCanvas/core/android/3d/: gmanager.h
GCanvas/core/src/: Android.mk  Application.mk  GCanvas.cpp  GCanvas.hpp  GCanvasJNI.cpp  GCanvasJNI.h  GCanvasLinkNative.cpp  GCanvasLinkNative.h  GCanvasManager.cpp  GCanvasManager.h  GCanvasString.hpp  GCanvasWeex.cpp  GCanvasWeex.hpp  GCanvasWindvaneLinkNative.cpp  GCanvasWindvaneLinkNative.h  GCanvas_Weex.cpp  IString.h  elf_sym_reader.cpp  export.h
GCanvas/core/test/: CMakeLists.txt  mainOffScreen.cpp  mainOnScreen.cpp
core/: CMakeLists.txt  README.md  build.gradle
core/android/: GCanvasJNI.cpp  GCanvasLinkNative.cpp  GCanvasLinkNative.h  common.h  external.h
core/android/3d/: g3d_jni.cpp  g3d_jni.h  gmanager.cpp
core/android/freetype-prebuilt/: README.md
core/android/manager/: GCanvasManagerAndroid.cpp
core/android/memory/: AutoPtr.h  IDelete.h  RefCount.h
core/android/png/: IPngCoder.h  LodePngCoder.cpp  LodePngCoder.h  PngLoader.cpp
core/src/: GCanvas.cpp  GCanvas.hpp  GCanvasManager.cpp  GCanvasManager.h  GCanvasWeex.cpp  GCanvasWeex.hpp  export.h
core/src/2d/: GCommandDecoder2D.cpp  GCommandDecoder2D.hpp  GContext2DRenderContext.cpp  GContext2DRenderContext.hpp
core/src/commandbuffer/: GCommandBuffer.cpp  GCommandBuffer.hpp  GCommandDecoder.cpp  GCommandDecoder.hpp  GCommandTypes.cpp  GCommandTypes.hpp
core/src/gcanvas/: GCanvas2dContext.cpp  GCanvas2dContext.h  GCanvasState.cpp  GCanvasState.h  GContext2dType.h  GConvert.cpp  GConvert.h  GFillStyle.h  GFontManager.cpp  GFontManager.h  GFontStyle.cpp  GFontStyle.h  GFrameBufferObject.cpp  GFrameBufferObject.h  GGlyphCache.cpp  GGlyphCache.h  GPath.cpp  GPath.h  GPath2D.cpp  GPath2D.h  GPathStroker.cpp  GPathStroker.h  GPoint.h  GShader.cpp  GShader.h  GShaderManager.h  GStrSeparator.cpp  GStrSeparator.h  GTransform.h  GTreemap.cpp  GTreemap.h  GWebglContext.cpp  GWebglContext.h
core/src/support/: CharacterSet.h  Encode.cpp  FileUtils.h  GLUtil.cpp  GLUtil.h  Lesser.h  Log.cpp  Log.h  Util.cpp  Util.h  Value.cpp
core/src/webgl/: GCommandDecoderWebGL.cpp  GCommandDecoderWebGL.hpp  GWebGLRenderContext.cpp  GWebGLRenderContext.hpp  GWebGLRenderContextInner.cpp  GWebGLRenderContextInner.hpp
core/test/benchmarks/: GenCases.sh
core/test/linux/: CMakeLists.txt  GBenchMark.cpp  mainOffScreen.cpp  mainOnScreen.cpp
core/test/w3c/: app.js  canvasPage.html  env.js  package.json  readme.md
node/: .gitignore  .npmignore  CMakeLists.txt  README.MD  export.js  package.json  readme.md  run_examples.sh
node/benchmark/: benchmark.js  drawimage.js  fillRect.js
node/binding/: Canvas.cc  Canvas.h  CanvasGradient.cc  CanvasGradient.h  CanvasPattern.cc  CanvasPattern.h  CanvasRenderingContext2D.cc  CanvasRenderingContext2D.h  CanvasRenderingContext3D.cc  CanvasRenderingContext3D.h  CanvasRenderingContextWebGL.cc  CanvasRenderingContextWebGL.h  Export.cc  Image.cc  Image.h  ImageData.cc  ImageData.h  ImageWorker.cc  ImageWorker.h  TextMetrics.cc  TextMetrics.h
node/binding/cairo/: CairoCanvas.cc  CairoCanvas.h  CairoCanvasGradient.cc  CairoCanvasGradient.h  CairoCanvasPattern.cc  CairoCanvasPattern.h  CairoCanvasRenderingContext2d.cc  CairoCanvasRenderingContext2d.h  CairoImage.cc  CairoImage.h  CairoImageBackend.cc  CairoImageBackend.h  CairoImageData.cc  CairoImageData.h  PNG.h  closure.cc  closure.h
node/binding/renderContext/: GRenderContext.cc  GRenderContext.h
node/binding/util/: ImageAsyncWorker.cc  ImageAsyncWorker.h  ImagePixelInfo.h  NodeBindingUtil.cc  NodeBindingUtil.h
node/binding/webGLRes/: WebGLBuffer.cc  WebGLBuffer.h  WebGLFrameBuffer.cc  WebGLProgram.cc  WebGLProgram.h  WebGLRenderBuffer.cc  WebGLShader.cc  WebGLShader.h  WebGLTexture.cc
node/binding/webgl/: WebGLActiveInfo.cc  WebGLActiveInfo.h  WebGLBuffer.cc  WebGLBuffer.h  WebGLFrameBuffer.cc  WebGLFrameBuffer.h  WebGLProgram.cc  WebGLProgram.h  WebGLRenderBuffer.cc  WebGLRenderBuffer.h  WebGLShader.cc  WebGLShader.h  WebGLTexture.cc  WebGLTexture.h  WebGLUniformLocation.cc  WebGLUniformLocation.h
node/docker/: Dockerfile
node/env/: Dockerfile  freetype.tar  readme.md  sources.list
node/example/: image.js
node/examples/: app.js  appjpeg.js  brush.js  canvas-size.js  clip.js  clock.js  drawcanvas.js  emptycanvas.js  fill-evenodd.js  font-family.js  font-shadow.js  font-stroke.js  font.js  fontFamily.js  fontStroke.js  globalAlpha.js  globule.js  gradients.js  grayscale-image.js  image-cached.js  image-exception.js  image-jpeg.js  image-one.js  image.js  imageCachedCanvas.js  imagejpeg.js  kraken.js  pango-glyphs.js  path-shadow-fill.js  path-shadow-stroke.js  pathShadow.js  pathShadowFill.js  pathShadowStroke.js  pattern.js  ray.js  resize.js  spark.js  state.js  testgc.js  text.js  (+6 more)
node/examples/webgl/: glclearColor.js  glcube.js  glcube2.js  glcubeTexture.js  gldistanceField.js  glfbo.js  glrectangle.js  glscissor.js  glstencil.js  gltexture.js  gltriagnble.js  gltriagnble2.js  gltriangle.js  gltriangle2.js
node/image/: ImageCahced.h
node/imagePool/: ImagePool.h
node/libs/: parse-font.js
node/renderContext/: GRenderContext.cc  GRenderContext.h
node/script/: install.sh
node/src/: CMakeLists.txt  package.json  readme.md
node/src/binding/: Canvas.cc  Canvas.h  CanvasGradient.cc  CanvasPattern.cc  Context2D.cc  Context2D.h  Export.cc  Image.cc  Image.h  ImageData.cc  ImageData.h  TextMetrics.cc
node/src/example/: app.js  clock.js  globalAlpha.js  gradients.js  grayscale-image.js  image.js  ray.js  spark.js  state.js
node/src/renderContext/: GRenderContext.cc  GRenderContext.h
node/src/util/: NodeBindingUtil.cc  NodeBindingUtil.h
node/stream/: jpgstream.js  pngstream.js
node/util/: NodeBindingUtil.cc  NodeBindingUtil.h
(+631 files in other folders)
